--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node server.js",
     "dev": "nodemon server.js --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,15 @@
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.1",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "babel-jest": "^25.1.0",
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "sinon": "^8.1.1",
+    "supertest": "^4.0.2"
   }
 }
