added mapbox stuff and implemented getCity function

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "apollo-datasource-rest": "^0.7.0",
+    "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
     "nodemon": "^2.0.2",
