--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "apollo-datasource-rest": "^0.7.0",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
